# House-Modeling-CG

./: .gitignore  CMakeLists.txt  README.md  build.md
projectlearn/include/: Animation.h  Animator.h  Bone.h  animdata.h  assimp_glm_helpers.h  camera.h  mesh.h  model.h  shader.h
projectlearn/res/shaders/: animation.fs  animation.vs  lighting.fs  lighting.vs  skybox.fs  skybox.vs
projectlearn/src/: CMakeLists.txt  imgui.ini  main.cpp
